<resources>
    <string name="app_name">Gestão</string>
    <string name="account_type_consultant">Consultor</string>
    <string name="account_type_productor">Produtor</string>
    <string name="senhaConsultor">244466666</string>
    <string name="senhaProfessor">senhaprofessor</string>
    <string name="login_intro">Já possui uma\nconta?</string>
    <string name="email_intro_value">Email</string>
    <string name="senha_intro_value">Senha</string>
    <string name="login_intro_value">Login</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="register_intro">Novo usuário? Registre-se agora!</string>
    <string name="cadastro_intro_value">Cadastrar</string>
    <string name="senha_consultor_intro">Senha de consultor</string>
    <string name="cadastre_info_intro">Cadastre-se\nAgora</string>
    <string name="codigo_fazenda">Código fazenda</string>
    <string name="dados_fazenda">Dados Fazenda</string>
    <string name="area_fazenda">Área</string>
    <string name="atividades_depreciacao">Atividades/Depreciação</string>
    <string name="taxa_remuneracao_capital">Taxa de remuneração de capital</string>
    <string name="custo_oportunidade_trabalho">Custo de oportunidade de trabalho gerencial</string>
    <string name="dividas_longo_prazo">Dívidas de longo prazo</string>
    <string name="metas_fazenda">Metas</string>
    <string name="lucro_fazenda">Lucro</string>
    <string name="margem_liquida">Margem Líquida</string>
    <string name="margem_bruta">Margem Bruta</string>
    <string name="renda_bruta">Renda Bruta</string>
    <string name="saldo_fazenda">Saldo</string>
    <string name="a_pagar">Contas a pagar do ano anterior</string>
    <string name="a_receber">Contas a receber do ano anterior</string>
    <string name="patrimonio_liquido">Patrimonio Líquido</string>
    <string name="solvencia_intro">Liquidez Geral</string>
    <string name="liquidez_intro">Liquidez Corrente</string>
    <string name="fluxo_caixa_intro">Fluxo de caixa</string>
    <string name="indicadores_financeiros_intro">Indicadores econômicos</string>
    <string name="balanco_patrimonial_intro">Balanço patrimonial</string>
    <string name="atividade_intro">Atividade</string>
    <string name="detalhes_intro">Detalhes</string>
    <string name="inventario_intro">Inventário</string>
    <string name="data_intro">Data</string>
    <string name="descricao_intro">Descrição</string>
    <string name="conta_intro">Conta</string>
    <string name="quantidade_inicial_intro">Quantidade inicial</string>
    <string name="valor_unitário">Valor unitário</string>
    <string name="data_vencimento_intro">Data vencimento</string>
    <string name="valor_amortizado_intro">Valor amortizado</string>
    <string name="cadastro_inventario_intro">Cadastro item</string>
    <string name="nome_intro">Nome</string>
    <string name="ano_compra_intro">Ano inicial</string>
    <string name="reforma_intro">Reforma</string>
    <string name="quantidade_atual_intro">Quantidade atual</string>
    <string name="resultados_fazenda">Resultados fazenda</string>
    <string name="indicadores_economicos">Indicadores econômicos</string>
    <string name="resultado_por_atividade">Resultado por atividade</string>
    <string name="receita_bruta_intro">Receita bruta</string>
    <string name="custo_operacional_efetivo">Custo operacional efetivo</string>
    <string name="custo_operacional_total">Custo operacional total</string>
    <string name="custo_total_intro">Custo total</string>
    <string name="despesas_intro">Despesas</string>
    <string name="fluxo_caixa_atividade">Fluxo caixa atividade</string>
    <string name="receitas_intro">Receitas</string>
    <string name="pendencias_intro">Pendências</string>
    <string name="rentabildiade_intro">Rentabilidade</string>
    <string name="ativo_intro">Ativo</string>
    <string name="passivo_intro">Passivo</string>
    <string name="programa_intro">Programa</string>
    <string name="distribuicao_patrimonio">Distribuição de patrimônio</string>
    <string name="agroplus_logo_description">Logo marca da Agroplus</string>
    <string name="entrada_intro">Venda/Saída</string>
    <string name="saida_intro">Compra/Entrada</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fazenda_intro">Fazenda</string>
    <string name="metas_intro">Metas</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


    <string name="terra_intro">Terra</string>
    <string name="benfeitoria_intro">Benfeitoria</string>
    <string name="maquinas_intro">Máquinas</string>
    <string name="animais_intro">Animais</string>
    <string name="insumos_intro">Insumos</string>
    <string name="produtos_intro">Produtos</string>
    <string name="vida_util_restante">Vida útil restante</string>
    <string name="ano_atual">2020</string>
    <string name="pagamento_prazo">Pagamento a prazo</string>
    <string name="saldo_bancario_hint">O capital que você possui no banco.</string>
    <string name="contas_receber_hint">Valor contas a receber.</string>
    <string name="contas_receber">Soma das contas a pagar.</string>
    <string name="venda_propriedade">Item do inventário</string>
    <string name="saldo_bancario">Saldo bancário</string>
    <string name="saldo_hint_intro">Receitas - Despesas</string>
    <string name="itens_intro">Itens</string>
    <string name="rateio_intro">Rateio</string>
    <string name="atividades_info_hint">Nome da atividade econômica</string>
    <string name="rateio_info_hint">Porcentagem custos gerais: 30,5; 47; 51.3</string>
    <string name="consumo_atividade">Consumido na atividade</string>
    <string name="movimentacoesvista_string">Movimentações a vista</string>
    <string name="movimentacoesprazo_string">Movimentações a prazo</string>
    <string name="distribuicao_movimentacao_string">Distribuição de movimentações</string>
    <string name="tipo_despesa">Tipo despesa</string>
    <string name="pagar_intro">pagar</string>
    <string name="cancelar_intro">Cancelar</string>
    <string name="confirmar_intro">Confirmar</string>
    <string name="comentarios_intro">Comentários</string>
    <string name="selecao_programa_intro">Escolha um programa</string>

    <string-array name="tiposItem">
        <item>Terra</item>
        <item>Benfeitoria</item>
        <item>Máquinas</item>
        <item>Animais</item>
        <item>Insumos</item>
        <item>Produtos</item>
        <item>Dívidas de longo prazo</item>
    </string-array>
    <string-array name="tiposDespesa">
        <item>Semente</item>
        <item>Fertilizante</item>
        <item>Defensivo</item>
        <item>Mão de obra</item>
        <item>Máquina</item>
        <item>Outros</item>
    </string-array>


    <string-array name="bensDepreciaveis">
        <item>Benfeitoria</item>
        <item>Máquinas</item>
    </string-array>

    <string-array name="bensCompraVenda">
        <item>Animais</item>
        <item>Insumos</item>
        <item>Produtos</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adicionar_fazenda">Adicionar fazenda.</string>
    <string name="participar_fazenda_intro">Participar de uma fazenda</string>
    <string name="selecionar_fazenda_intro">Escolha sua fazenda</string>
    <string name="trocar_fazenda_menu">Trocar fazenda</string>
    <string name="senha_fazenda_hint">Insira senha da fazenda</string>
    <string name="trabalho_familiar_remunerado">Trabalho familiar não remunerado.</string>
    <string name="listagem_termo">Listagem</string>

</resources>
