<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/indicadores_economicos"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/selecionarAtividadeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/spinner_shape"
            android:gravity="center"
            android:minWidth="120dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/lucroResultadoAtivideFazenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/lucro_fazenda"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/margemLiquidaAtividadeFazenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/margem_liquida"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/margemBrutaAtividadeFazenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/margem_bruta"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/receitaBrutaAtividadeFazenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/receita_bruta_intro"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/custoTotalAtividadeFazenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/custo_total_intro"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/custoOperacionalTotalAtividadeFazenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/custo_operacional_total"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/custoOperacionalEfetivoAtividadeFazenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/custo_operacional_efetivo"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/distribuicao_despesas_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="8dp"
            android:padding="8dp" />

    </LinearLayout>
</ScrollView>