<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PendenciasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto"
        android:text="Cadastrar pendência"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nome_intro"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/nomeItemPendencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/valor_unitário"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/valorUnitarioPendencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        tools:ignore="LabelFor" />

    <ToggleButton
        android:id="@+id/entradaSaidaPendencia"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/toggle_button_shape"
        android:checked="true"
        android:textColor="@android:color/white"
        android:textOff="@string/entrada_intro"
        android:textOn="@string/saida_intro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/data_vencimento_intro"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <CalendarView
        android:id="@+id/dataVencimentoPendencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxDate="6/30/2021"
        android:minDate="07/01/2020" />

    <Button
        android:id="@+id/cadastrarPendencia"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_background_orange"
        android:text="@string/cadastro_intro_value"
        android:textColor="@android:color/white" />

    </LinearLayout>



</ScrollView>