<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/senhaFazendaParticiparDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/senha_fazenda_hint"
        android:inputType="textPersonName|textPassword"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelarEntradaFazenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/left_button_blue_shape"
            android:text="@string/cancelar_intro"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/confirmarEntradaFazenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/right_button_orange_shape"
            android:text="@string/confirmar_intro"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>