<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.agrogestao.view.fragments.navigation.ApresentacaoFazendaFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/apresentacao_fazenda">


        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_cadastroInventarioFragment"
            app:destination="@id/cadastroInventarioFragment" />
        <action
            android:id="@+id/action_nav_home_to_resultadosFazendaFragment"
            app:destination="@id/resultadosFazendaFragment" />
        <action
            android:id="@+id/action_nav_home_to_cadastroFluxoCaixaFragment"
            app:destination="@id/cadastroFluxoCaixaFragment" />
        <action
            android:id="@+id/action_nav_home_to_atualizarFazendaFragment"
            app:destination="@id/atualizarFazendaFragment" />
        <action
            android:id="@+id/action_nav_home_to_resultadosAtividadeFragment"
            app:destination="@id/resultadosAtividadeFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.agrogestao.view.fragments.navigation.BalancoPatrimonialFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/apresentacao_balanco_patrimonial" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.agrogestao.view.fragments.navigation.FluxoCaixaFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fluxo_caixa_atividade" />
    <fragment
        android:id="@+id/atualizarFazendaFragment"
        android:name="com.example.agrogestao.view.fragments.navigation.AtualizarFazendaFragment"
        android:label="AtualizarFazendaFragment" />
    <fragment
        android:id="@+id/cadastroFluxoCaixaFragment"
        android:name="com.example.agrogestao.view.fragments.navigation.CadastroFluxoCaixaFragment"
        android:label="CadastroFluxoCaixaFragment" />
    <fragment
        android:id="@+id/cadastroInventarioFragment"
        android:name="com.example.agrogestao.view.fragments.navigation.CadastroInventarioFragment"
        android:label="CadastroInventarioFragment" />
    <fragment
        android:id="@+id/resultadosAtividadeFragment"
        android:name="com.example.agrogestao.view.fragments.navigation.ResultadosAtividadeFragment"
        android:label="ResultadosAtividadeFragment" />
    <fragment
        android:id="@+id/resultadosFazendaFragment"
        android:name="com.example.agrogestao.view.fragments.navigation.ResultadosFazendaFragment"
        android:label="ResultadosFazendaFragment" />
</navigation>